--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{
-  "homepage": "https://github.com/ch-abdullah-57/My-React-App.git",
+{  
   "name": "my-project",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
-  },
+    "preview": "vite preview"
+    },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "classnames": "^2.5.1",
